0.6.0 (2024-01-01)
  * Complete rewrite in Python with async/await support for improved performance
  * Add diff serving capability using xdelta3, bsdiff, or rsync to reduce bandwidth
  * Implement automatic retry with exponential backoff for failed downloads
  * Add resume support for partial downloads using HTTP Range requests
  * Add optional checksum verification after downloads
  * Improve progress reporting with real-time speed, ETA, and percentage
  * Enhance error handling with detailed error messages and context
  * Improve postmirror script execution with better error checking (fixes #196)
  * All dependencies available in Debian/Ubuntu repositories (python3-aiohttp, xdelta3)
  * Maintain full backward compatibility with existing mirror.list configuration
  * Use asyncio.to_thread() for file I/O to avoid blocking operations
  * Support hardlink-aware file copying with improved unlink handling
  * Better handling of by-hash directory downloads
  * Improved Release file parsing with support for all hash types
  * Enhanced documentation with reST-formatted docstrings
  * Add comprehensive Debian packaging support

0.5.4 (2017-05-29)
  * Add limit_rate to example mirror.list (fixes #72)
  * Fix use of uninitialized value $config{"options"} warning (fixes #68,
    Debian bug #851979, #859601)
  * Fix warning on repository without md5sum (fixes #66)
  * Write SHA1 and SHA256 in addition to MD5
  * Also download xz-compressed Components-$arch.yml.xz (fixes #69)

0.5.3 (2017-01-06)
  * Add support for 'deb [arch=amd64] ...' format (fixes #32, #65)
  * Create directories including their parents
  * Add support for quoted variables with spaces (fixes #43, #67)

0.5.2 (2016-11-08)
  * Fix typo tranlation -> translation (fixes #35, Debian bug #756035,
    Launchpad bug #1455522)
  * if fork() fails, it returns undef and not a negative number (merge #37)
  * Replace obsolete dpkg option '--print-installation-architecture'